...
    //MARK: Methods
    func configCell(for cell: ImagesListCell, with indexPath: IndexPath) {
        
        cell.dateLabel.text = dateFormatter.string(from: Date())
        
        let isLiked = indexPath.row % 2 == 0
        let likeImage = UIImage(named: isLiked ? "likeButtonActive" : "likeButtonInactive")
        cell.likeButton.setImage(likeImage, for: .normal)
        
        guard let image = UIImage(named: "\(indexPath.row)") else { return }
        cell.cellImage.image = image
    }
    
...
