...
        .darkContent
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        progressBar.progress = 0
        webView.navigationDelegate = self
        
        presenter?.viewDidLoad()
        
...
